--- a/combat.html
+++ b/combat.html
@@ -13,7 +13,7 @@
 		<link rel='stylesheet' href='css/content-matching.css'>
 		<link rel='stylesheet' href='css/footer.css'>
 		<link rel='stylesheet' href='css/aside.css'>
-		filter:progid:DXImageTransform.Microsoft.gradient(startcolorstr=#7F000000,endcolorstr=#7F000000);
+<!-- 		filter:progid:DXImageTransform.Microsoft.gradient(startcolorstr=#7F000000,endcolorstr=#7F000000); -->
 	</head>
     <body>
 		<div class='header' id='top-position'>
